Bug 299722 - 'Send again' doubles list of recipients
Summary: 'Send again' doubles list of recipients
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-10 07:03 UTC by Axel Braun
Modified: 2012-05-10 11:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2012-05-10 07:03:34 UTC
KDE 4.8.3: A mail with 18 recipients and 2 persons in cc was successful sent.


Reproducible: Always

Steps to Reproduce:
1. Go to the 'sent' folder, Chose 'Message' -> sent again
2. List of recipients is doubled up: 36 recipients and 2 persons in cc
3.


Expected Results:  
Original list of recipients and cc is kept.
quite annoying, as the doubles have to be deleted one by one
Comment 1 Laurent Montel 2012-05-10 08:04:56 UTC
Can not reproduce it.
Perhaps you can send me in private your email ?
Because here it work fine.
Comment 2 Axel Braun 2012-05-10 08:43:45 UTC
Mail sent as PM
Comment 3 Laurent Montel 2012-05-10 10:25:38 UTC
Just a question. You used a "List of email" for to no ?

Because I can see in mail:
X-KMail-UnExpanded-To: ....

It's not removed it must be.
Comment 4 Axel Braun 2012-05-10 10:45:14 UTC
No, i did not use a list - according to my last tests, lists are still a mess and do not properly expand.
I do not see that I can do something on the mail as normal user, or?
Thanks!
Comment 5 Laurent Montel 2012-05-10 11:09:48 UTC
In your email you have X-KMail-UnExpanded-To so you used it .
It's just add when we use email list.
And I can reproduce your bug and fixed it.
Comment 6 Laurent Montel 2012-05-10 11:10:30 UTC
Git commit 7c8e035282dd27a02ab25e6ec94305819ccee718 by Montel Laurent.
Committed on 10/05/2012 at 13:10.
Pushed by mlaurent into branch 'master'.

Fix Bug 299722 - 'Send again' doubles list of recipients

FIXED-IN: 4.8.4

M  +3    -0    messagecore/stringutil.cpp

http://commits.kde.org/kdepim/7c8e035282dd27a02ab25e6ec94305819ccee718
Comment 7 Laurent Montel 2012-05-10 11:11:27 UTC
Git commit c4ac3cb3eca4a535dc368633b8bb64c64f01221c by Montel Laurent.
Committed on 10/05/2012 at 13:10.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 299722 - 'Send again' doubles list of recipients

FIXED-IN: 4.8.4
(cherry picked from commit 7c8e035282dd27a02ab25e6ec94305819ccee718)

M  +3    -0    messagecore/stringutil.cpp

http://commits.kde.org/kdepim/c4ac3cb3eca4a535dc368633b8bb64c64f01221c