Fix Bug 299722 - 'Send again' doubles list of recipients

FIXED-IN: 4.8.4
BUG: 299722
(cherry picked from commit 7c8e035282dd27a02ab25e6ec94305819ccee718)